<resources>
    <string name="app_name">Sudoku</string>
    <string name="url_board_api" translatable="false">https://sugoku.herokuapp.com/board?difficulty=</string>
    <string name="api_difficulty_easy" translatable="false">easy</string>
    <string name="api_difficulty_medium" translatable="false">medium</string>
    <string name="api_difficulty_hard" translatable="false">hard</string>

    <string name="button_delete">Del</string>
    <string name="button_check_solution">Check</string>
    <string name="button_easy">Easy</string>
    <string name="button_medium">Medium</string>
    <string name="button_hard">Hard</string>
    <string name="button_start">Start Now</string>
    <string name="button_help">Help</string>
    <string name="button_new_game">New Game</string>
    <string name="button_scores">Scores</string>
    <string name="button_highscores">Highscores</string>
    <string name="button_scores_list">All scores</string>
    <string name="button_hint">Hint</string>
    <string name="button_home">Quit</string>
    <string name="button_show">Show</string>
    <string name="button_back">Back</string>
    <string name="button_next">Next</string>

    <string name="textView_Level">Level: </string>
    <string name="textView_createdBy">Created by Marco Lo Mele and Giulia Desideri</string>
    <string name="textView_hints">Hints: </string>
    <string name="textView_attempts">Attempts: </string>
    <string name="textView_time">Time: </string>
    <string name="textView_rules">The goal of Sudoku is to fill each empty box on the 9x9 grid with numbers so that each column, each row and each quadrant(3x3) contains all the numbers 1 through 9.\nThe number pre-entered at the beginning cannot be changed.\nThere is only one exact solution for each sudoku scheme. The solution can be found using logic so there is no need to guess!</string>
    <string name="textView_rules2">There are 3 different levels and for each level there are a fixed number of attempts and hints:\n\n\t\tEASY: 5 attempts and unlimited hints.\n\t\tMEDIUM: 3 attempts and 9 hints.\n\t\tHARD: 1 attempt and 6 hints.\n\nIf hints end you can only use your brain!\nIf attempts end you lose the game!</string>
    <string name="textView_games">Games Won: </string>
    <string name="textView_win">Win</string>
    <string name="textView_lose">Lose</string>

    <string name="toast_no_hints">No hints left!</string>
    <string name="toast_last_attempt">Your last attempt!</string>
    <string name="toast_win">You win!</string>
    <string name="toast_lose">You lose!</string>
    <string name="toast_error">There is an error</string>
    <string name="toast_cell_not_editable">You cannot edit this number!</string>

</resources>
